fixed bug with scroll behavior on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,13 +43,7 @@
 
 		html, body {
 			min-width: 320px;
-			overflow: default;
 		}
-
-		.container {
-			overflow-y: visible;
-		}
-
 	}
 
 	body {
@@ -1092,6 +1086,19 @@
 			text-align: center;
 			border-radius: 30px;
 			border: 5px double yellow;
+		}
+
+		@media screen and (max-width: 480px) {
+
+			body {
+				overflow: visible;
+			}
+	
+			.container {
+				overflow-y: visible;
+				scroll-behavior: auto;
+			}
+	
 		}
         /*
 	Some styles taken from Full Motion by TEMPLATED
